5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4143/executions/1801_2575.log
== TEST (2019-06-12 21:36:54) 
-- CODE:
from numpy import*
a = array(eval(input("MERDA : "))).upper()
b = zeros(3,dtype=int)
tv=0
net=0
you=0
for x in a:
	if (a[x]=="TV"):
		tv+=1
	elif(a[x]=="NETFLIX"):
		net+=1
	elif(a[x]=="YOUTUBE"):
		you+=1
b[0]=tv
b[1]=net
b[2]=you
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 21:37:38) 
-- CODE:
from numpy import*
a =input("MERDA : ").upper()
b = zeros(3,dtype=int)
tv=0
net=0
you=0
for x in a:
	if (a[x]=="TV"):
		tv+=1
	elif(a[x]=="NETFLIX"):
		net+=1
	elif(a[x]=="YOUTUBE"):
		you+=1
b[0]=tv
b[1]=net
b[2]=you
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 21:38:25) 
-- CODE:
from numpy import*
a = array(eval(input("MERDA : "))).upper()
b = zeros(3,dtype=int)
tv=0
net=0
you=0
for x in a:
	if (a[x]=="TV"):
		tv+=1
	elif(a[x]=="NETFLIX"):
		net+=1
	elif(a[x]=="YOUTUBE"):
		you+=1
b[0]=tv
b[1]=net
b[2]=you
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 21:47:33) 
-- CODE:
from numpy import*
a = input("ata: "))).upper()
b = zeros(3,dtype=int)
i = 0 
tv=0
net=0
you=0
for x in a:
	if (a[i]=="TV"):
		i+=1
		tv+=1
	elif(a[i]=="NETFLIX"):
		i+=1
		net+=1
	elif(a[i]=="YOUTUBE"):
		you+=1
		i+=1
b[0]=tv
b[1]=net
b[2]=you
print(b)
-- ERROR:
File "XXXX", line 2
    a = input())).upper()
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 21:47:42) 
-- CODE:
from numpy import*
a = input("ata: ").upper()
b = zeros(3,dtype=int)
i = 0 
tv=0
net=0
you=0
for x in a:
	if (a[i]=="TV"):
		i+=1
		tv+=1
	elif(a[i]=="NETFLIX"):
		i+=1
		net+=1
	elif(a[i]=="YOUTUBE"):
		you+=1
		i+=1
b[0]=tv
b[1]=net
b[2]=you
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 21:48:28) 
-- CODE:
from numpy import*
a = input("ata: ").upper()
b = zeros(3,dtype=int)
i = 0 
tv=0
net=0
you=0
for x in a:
	if (a[i]=="TV"):
		tv+=1
	elif(a[i]=="NETFLIX"):
		net+=1
	elif(a[i]=="YOUTUBE"):
		you+=1
	i+=1
b[0]=tv
b[1]=net
b[2]=you
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 21:49:16) 
-- CODE:
from numpy import*
a = input("ata: ").upper()
b = zeros(3,dtype=int)
i = 0 
tv=0
net=0
you=0
for x in a:
	if (a[x]=="TV"):
		tv+=1
	elif(a[x]=="NETFLIX"):
		net+=1
	elif(a[x]=="YOUTUBE"):
		you+=1
	x+=1
b[0]=tv
b[1]=net
b[2]=you
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 21:50:31) 
-- CODE:
from numpy import*
a = input("ata: ").upper()
b = zeros(3,dtype=int)
c=len(a)
i = 0 
tv=0
net=0
you=0
while(c>=i):
	if (aix]=="TV"):
		tv+=1
	elif(a[i]=="NETFLIX"):
		net+=1
	elif(a[i]=="YOUTUBE"):
		you+=1
	i+=1
b[0]=tv
b[1]=net
b[2]=you
print(b)
-- ERROR:
File "XXXX", line 10
    if (aix]=="TV"):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 21:50:40) 
-- CODE:
from numpy import*
a = input("ata: ").upper()
b = zeros(3,dtype=int)
c=len(a)
i = 0 
tv=0
net=0
you=0
while(c>=i):
	if (a[i]=="TV"):
		tv+=1
	elif(a[i]=="NETFLIX"):
		net+=1
	elif(a[i]=="YOUTUBE"):
		you+=1
	i+=1
b[0]=tv
b[1]=net
b[2]=you
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 21:54:24) 
-- CODE:
from numpy import*
a = array(eval(input("ata: "))).upper()
b = zeros(3,dtype=int)
c=len(a)
i = 0 
tv=0
net=0
you=0
while(c>=i):
	if (a[i] == "TV"):
		tv+=1
	elif(a[i]=="NETFLIX"):
		net+=1
	elif(a[i]=="YOUTUBE"):
		you+=1
	i+=1
b[0]=tv
b[1]=net
b[2]=you
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 21:54:36) 
-- CODE:
from numpy import*
a = eval(input("ata: "))).upper()
b = zeros(3,dtype=int)
c=len(a)
i = 0 
tv=0
net=0
you=0
while(c>=i):
	if (a[i] == "TV"):
		tv+=1
	elif(a[i]=="NETFLIX"):
		net+=1
	elif(a[i]=="YOUTUBE"):
		you+=1
	i+=1
b[0]=tv
b[1]=net
b[2]=you
print(b)
-- ERROR:
File "XXXX", line 2
    a = eval(input())).upper()
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 21:54:45) 
-- CODE:
from numpy import*
a = eval(input("ata: ")).upper()
b = zeros(3,dtype=int)
c=len(a)
i = 0 
tv=0
net=0
you=0
while(c>=i):
	if (a[i] == "TV"):
		tv+=1
	elif(a[i]=="NETFLIX"):
		net+=1
	elif(a[i]=="YOUTUBE"):
		you+=1
	i+=1
b[0]=tv
b[1]=net
b[2]=you
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 21:55:16) 
-- CODE:
from numpy import*
a =input("ata: ").upper()
b = zeros(3,dtype=int)
c=len(a)
i = 0 
tv=0
net=0
you=0
while(c>=i):
	if (a[i] == "TV"):
		tv+=1
	elif(a[i]=="NETFLIX"):
		net+=1
	elif(a[i]=="YOUTUBE"):
		you+=1
	i+=1
b[0]=tv
b[1]=net
b[2]=you
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 21:58:04) 
-- CODE:
from numpy import*
a =input("ata: ").upper()
b = zeros(3,dtype=int)
c=len(a)
i = 0 
tv=0
net=0
you=0
for x in a :
	if (a[i] == "TV"):
		tv+=1
	elif(a[i]=="NETFLIX"):
		net+=1
	elif(a[i]=="YOUTUBE"):
		you+=1
	i+=1
b[0]=tv
b[1]=net
b[2]=you
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 21:58:24) 
-- CODE:
from numpy import*
a =input("ata: ").upper()
b = zeros(3,dtype=int)
c=len(a)
i = 0 
tv=0
net=0
you=0
for x in a :
	if (a[i] == "TV"):
		tv+=1
	elif(a[i]=="NETFLIX"):
		net+=1
	elif(a[i]=="YOUTUBE"):
		you+=1
	i+=1
b[0]=tv
b[1]=net
b[2]=you
print(b)
-- EXECUTION TIME:
1.02302
-- TEST CASE 1:
---- input:
['NETFLIX','TV','NETFLIX','NETFLIX']
---- correct output:
[1 3 0]
---- user output:
[0 0 0]
-- TEST CASE 2:
---- input:
['NETFLIX','TV','YOUTUBE']
---- correct output:
[1 1 1]
---- user output:
[0 0 0]
-- TEST CASE 3:
---- input:
['NETFLIX','TV','YOUTUBE','NETFLIX','TV','YOUTUBE']
---- correct output:
[2 2 2]
---- user output:
[0 0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 22:12:24) 
-- CODE:
from numpy import*
a =input("ata: ").upper()
b = zeros(3,dtype=int)
c=len(a)
i = 0 
tv=0
net=0
you=0
for x in a :
	if (x[i] == "TV"):
		tv+=1
	elif(x[i]=="NETFLIX"):
		net+=1
	elif(x[i]=="YOUTUBE"):
		you+=1
	i+=1
b[0]=tv
b[1]=net
b[2]=you
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:59:35) 
-- CODE:
from numpy import*
a =input("ata: ").upper()
b = zeros(3,dtype=int)
c=len(a)
i = 0 
tv=0
net=0
you=0
for x in c :
	if (x[i] == "TV"):
		tv+=1
	elif(x[i]=="NETFLIX"):
		net+=1
	elif(x[i]=="YOUTUBE"):
		you+=1
	i+=1
b[0]=tv
b[1]=net
b[2]=you
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
